# gladius-agent

./: .env.example  .gitignore  README.md  pyproject.toml  tox.ini
.agent/: agentic-framework.md  code-review.md
docs/: implementer-redesign.md
examples/: generate_data.py  phase_guidance.yaml  project.yaml
examples/app_competition/: README.md
examples/churn_prediction/: README.md
examples/data_dog/: README.md
examples/fake_competition/: .env.example  README.md  generate_data.py
gladius/: CLAUDE.md.template  __init__.py  __main__.py  _orchestrator_helper.py  claude_md.py  cli.py  config.py  graph.py  langsmith_tracing.py  logging_setup.py  orchestrator.py  orchestrator_system_prompt.md  preflight.py  project_setup.py  session_replay.py  state.py  submission.py
gladius/agents/: __init__.py  _agent_defs.py  _base.py  _console.py  code.py  ensemble.py  execution.py  gladius_agent.py  implementer.py  planner.py  solver.py  strategy.py  summarizer.py  validation.py
gladius/db/: __init__.py  queries.py  schema.py  store.py
gladius/hooks/: after_edit.sh  validate_bash.sh
gladius/nodes/: __init__.py  error_handler.py  router.py
gladius/phases/: implementation.py  planning.py  validation.py
gladius/prompts/: orchestrator_system_prompt.md
gladius/roles/: __init__.py  _agent_defs.py  _console.py  agent_runner.py  helpers.py  specs.py
gladius/skills/: __init__.py
gladius/tools/: __init__.py  _response.py  fake_platform_tools.py  kaggle_tools.py  metric_tools.py  zindi_common.py  zindi_tools.py
gladius/topologies/: __init__.py  _catalog.py  autonomous.py  base.py  functional.py  matrix.py  mini_team.py  platform.py  two_pizza.py
gladius/utilities/: _orchestrator_helper.py  logging_setup.py  preflight.py  process_cleanup.py  session_replay.py
gladius/utils/: __init__.py  code_reader.py  llm.py  (+5 more)
scripts/: patch_sdk.py
src/: CLAUDE.md.template  __init__.py  claude_md.py  cli.py  orchestrator.py  preflight.py  project_setup.py  state.py  submission.py
tests/: __init__.py  conftest.py  test_after_edit_hook.py  test_agent_base.py  test_agent_runner_unit.py  test_agent_specs.py  test_claude_md.py  test_cli.py  test_competition_config.py  test_config_env_loading.py  test_db_store_and_main.py  test_langsmith_tracing.py  test_nodes.py  test_orchestrator.py  test_orchestrator_helper.py  test_orchestrator_submission.py  test_planner_parallel.py  test_preflight.py  test_process_cleanup.py  test_project_setup.py  test_project_setup_runtime.py  test_roles.py  test_roles_console.py  test_roles_helpers_extra.py  test_router.py  test_skills_module.py  test_state.py  test_submission.py  test_tools_stack.py  test_topologies.py  test_validate_bash_hook.py  test_zindi_common.py
(+190 files in other folders)
