[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gladius-agent"
version = "0.1.0"
description = "Fully autonomous multi-agent ML competition system"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.44",
    "numpy>=1.24.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.11.0",
    "psutil>=5.9.0",
    "kaggle>=1.6.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "zindi>=0.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
gladius = "gladius.orchestrator:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gladius*"]
