[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gladius-agent"
version = "0.1.0"
description = "Fully autonomous multi-agent ML competition system"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk==0.1.44",
    "psutil>=5.9.0",
    "kaggle>=1.6.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "zindi>=0.0.3",
    "pyyaml>=6.0",
    "ollama>=0.6.1",
    "pytest>=9.0.2",
    "tox>=4.46.3",
    "lightgbm>=4.6.0",
    "scikit-learn>=1.7.2",
    "pandas>=2.3.3",
    "numpy>=2.2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.11.0",
    "optuna>=4.7.0",
    "pandas>=2.3.3",
    "numpy>=1.24.0",
]
jupyter = [
    "jupyter-mcp-server>=0.1.0",
]

[project.scripts]
gladius = "gladius.orchestrator:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gladius*"]

[tool.setuptools.package-data]
"gladius.utils" = ["templates/**/*"]
